--- a/fulfillment/package.json
+++ b/fulfillment/package.json
@@ -4,15 +4,13 @@
   "private": true,
   "scripts": {
     "start": "node ./out/www.js",
-    "compile": "tsc -p ./src"
+    "postinstall": "grunt build",
   },
   "dependencies": {
     "body-parser": "~1.18.2",
     "debug": "~2.6.9",
     "express": "~4.15.5",
-    "morgan": "~1.9.0"
-  },
-  "devDependencies": {
+    "morgan": "~1.9.0",
     "typescript": "^2.5.3",
     "mocha": "^3.5.3",
     "@types/node": "^8.0.31",
