--- a/fulfillment/package.json
+++ b/fulfillment/package.json
@@ -22,5 +22,13 @@
     "@types/es6-promise": "^0.0.33",
     "grunt": "^1.0.1",
     "grunt-ts": "^6.0.0-beta.16"
+  },
+  "devDependencies": {
+    "tslint": "^5.7.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-newer": "^1.3.0",
+    "grunt-tslint": "^5.0.1",
+    "grunt-nodemon": "^0.4.2",
+    "grunt-concurrent": "^2.3.1"
   }
 }
