--- a/hsbc-api/package.json
+++ b/hsbc-api/package.json
@@ -24,7 +24,8 @@
     "@types/debug": "^0.0.30",
     "@types/es6-promise": "^0.0.33",
     "grunt": "^1.0.1",
-    "grunt-ts": "^6.0.0-beta.16"
+    "grunt-ts": "^6.0.0-beta.16",
+    "mongodb": "^2.2.31"
   },
   "devDependencies": {
     "tslint": "^5.7.0",
