added HSBC client library and dependecies (#7)

--- a/package.json
+++ b/package.json
@@ -8,18 +8,22 @@
   },
   "dependencies": {
     "body-parser": "~1.18.2",
+    "request": "^2.83.0",
+    "bluebird": "^3.5.1",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "morgan": "~1.9.0",
     "typescript": "^2.5.3",
     "mocha": "^3.5.3",
+    "@types/es6-shim": "^0.31.35",
+    "@types/bluebird": "^3.5.16",
+    "@types/request": "^2.0.6",
     "@types/node": "^8.0.31",
     "@types/express": "^4.0.37",
     "@types/body-parser": "^1.16.5",
     "@types/morgan": "^1.7.33",
     "@types/mocha": "^2.2.43",
     "@types/debug": "^0.0.30",
-    "@types/es6-promise": "^0.0.33",
     "grunt": "^1.0.1",
     "grunt-ts": "^6.0.0-beta.16"
   },
