--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./out/www.js",
-    "postinstall": "grunt build"
+    "grunt-build": "grunt build"
   },
   "dependencies": {
     "@types/bluebird": "^3.5.16",
