--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "mocha": "^3.5.3",
     "morgan": "~1.9.0",
     "request": "^2.83.0",
-    "typescript": "^2.5.3"
+    "typescript": "^2.5.3",
+    "express-basic-auth": "1.1.3"
   },
   "devDependencies": {
     "tslint": "^5.7.0",
