--- a/package.json
+++ b/package.json
@@ -7,6 +7,25 @@
     "grunt-build": "grunt build"
   },
   "dependencies": {
+    "bluebird": "^3.5.1",
+    "body-parser": "~1.18.2",
+    "debug": "~2.6.9",
+    "express": "~4.15.5",
+    "grunt": "^1.0.1",
+    "grunt-ts": "^6.0.0-beta.16",
+    "morgan": "~1.9.0",
+    "request": "^2.83.0",
+    "express-basic-auth": "1.1.3"
+  },
+  "devDependencies": {
+    "tslint": "^5.7.0",
+    "mocha": "^3.5.3",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-newer": "^1.3.0",
+    "grunt-tslint": "^5.0.1",
+    "grunt-nodemon": "^0.4.2",
+    "grunt-concurrent": "^2.3.1",
+    "typescript": "^2.5.3",
     "@types/bluebird": "^3.5.16",
     "@types/body-parser": "^1.16.5",
     "@types/debug": "^0.0.30",
@@ -15,26 +34,6 @@
     "@types/mocha": "^2.2.43",
     "@types/morgan": "^1.7.33",
     "@types/node": "^8.0.31",
-    "@types/request": "^2.0.6",
-    "bluebird": "^3.5.1",
-    "body-parser": "~1.18.2",
-    "config": "^1.27.0",
-    "debug": "~2.6.9",
-    "express": "~4.15.5",
-    "grunt": "^1.0.1",
-    "grunt-ts": "^6.0.0-beta.16",
-    "mocha": "^3.5.3",
-    "morgan": "~1.9.0",
-    "request": "^2.83.0",
-    "typescript": "^2.5.3",
-    "express-basic-auth": "1.1.3"
-  },
-  "devDependencies": {
-    "tslint": "^5.7.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-newer": "^1.3.0",
-    "grunt-tslint": "^5.0.1",
-    "grunt-nodemon": "^0.4.2",
-    "grunt-concurrent": "^2.3.1"
+    "@types/request": "^2.0.6"
   }
 }
