--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "grunt-ts": "^6.0.0-beta.16",
     "morgan": "~1.9.0",
     "request": "^2.83.0",
-    "express-basic-auth": "1.1.3"
+    "express-basic-auth": "1.1.3",
+    "dotenv": "^4.0.0"
   },
   "devDependencies": {
     "tslint": "^5.7.0",
