--- a/package.json
+++ b/package.json
@@ -29,13 +29,20 @@
     "@types/morgan": "^1.7.35",
     "@types/node": "^8.0.53",
     "@types/request": "^2.0.8",
+    "@types/chai": "^4.0.4",
+    "@types/chai-as-promised": "^7.1.0",
+    "@types/chai-http": "^3.0.3",
     "grunt-concurrent": "^2.3.1",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-newer": "^1.3.0",
     "grunt-nodemon": "^0.4.2",
     "grunt-tslint": "^5.0.1",
     "mocha": "^3.5.3",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "chai-http": "^3.0.0",
     "tslint": "^5.8.0",
-    "typescript": "^2.6.1"
+    "typescript": "^2.6.1",
+    "ts-node": "^3.3.0"
   }
 }
