--- a/app.yaml
+++ b/app.yaml
@@ -1,3 +1,9 @@
+service: dialogflow-webhook
+env: flex
 runtime: custom
-service: chatbot-webhook
-
+network:
+  name: production
+resources:
+  cpu: 2
+  memory_gb: 1.4
+  disk_size_gb: 10
