--- a/app.yaml
+++ b/app.yaml
@@ -1,2 +1,9 @@
-runtime: custom
+service: dialogflow-webhook
 env: flex
+runtime: custom
+network:
+  name: production
+resources:
+  cpu: 2
+  memory_gb: 1.4
+  disk_size_gb: 10
