--- a/package.json
+++ b/package.json
@@ -1,34 +1,48 @@
 {
-  "name": "fulfillment",
-  "version": "0.0.0",
+  "name": "dialogflow-webhook",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./out/www.js",
-    "postinstall": "grunt build"
+    "grunt-build": "grunt build"
   },
   "dependencies": {
+    "bluebird": "^3.5.1",
     "body-parser": "~1.18.2",
     "debug": "~2.6.9",
+    "dotenv": "^4.0.0",
     "express": "~4.15.5",
-    "morgan": "~1.9.0",
-    "typescript": "^2.5.3",
-    "mocha": "^3.5.3",
-    "@types/node": "^8.0.31",
-    "@types/express": "^4.0.37",
-    "@types/body-parser": "^1.16.5",
-    "@types/morgan": "^1.7.33",
-    "@types/mocha": "^2.2.43",
-    "@types/debug": "^0.0.30",
-    "@types/es6-promise": "^0.0.33",
+    "express-basic-auth": "1.1.3",
     "grunt": "^1.0.1",
-    "grunt-ts": "^6.0.0-beta.16"
+    "grunt-ts": "^6.0.0-beta.17",
+    "morgan": "~1.9.0",
+    "request": "^2.83.0"
   },
   "devDependencies": {
-    "tslint": "^5.7.0",
+    "@types/bluebird": "^3.5.18",
+    "@types/body-parser": "^1.16.8",
+    "@types/debug": "^0.0.30",
+    "@types/dotenv": "^4.0.2",
+    "@types/es6-shim": "^0.31.35",
+    "@types/express": "^4.0.39",
+    "@types/mocha": "^2.2.44",
+    "@types/morgan": "^1.7.35",
+    "@types/node": "^8.0.53",
+    "@types/request": "^2.0.8",
+    "@types/chai": "^4.0.4",
+    "@types/chai-as-promised": "^7.1.0",
+    "@types/chai-http": "^3.0.3",
+    "grunt-concurrent": "^2.3.1",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-newer": "^1.3.0",
-    "grunt-tslint": "^5.0.1",
     "grunt-nodemon": "^0.4.2",
-    "grunt-concurrent": "^2.3.1"
+    "grunt-tslint": "^5.0.1",
+    "mocha": "^3.5.3",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "chai-http": "^3.0.0",
+    "tslint": "^5.8.0",
+    "typescript": "^2.6.1",
+    "ts-node": "^3.3.0"
   }
 }
