--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "grunt": "^1.0.1",
     "grunt-ts": "^6.0.0-beta.17",
     "morgan": "~1.9.0",
+    "mysql": "^2.15.0",
     "request": "^2.83.0"
   },
   "devDependencies": {
